update graphs, retweeted flags, add created_at DATETIME field to sql

--- a/Web/graph_template.html
+++ b/Web/graph_template.html
@@ -1,6 +1,2 @@
-<h3>Top 10 users by retweet count</h3>
-<img src="{top_users}"><br>
-<h3>Top 10 retweeted tweets</h3>
-<img src="{top_tweets}"><br>
-<h3>Top 10 Klout scores</h3>
-<img src="{top_klout}">
+<h3>Tweets and Retweets by hour</h3>
+<img src="{tweets}" alt='Tweets and Retweets by hour'><br>
